argocd/aws/203403084713/clusters/cbioportal-prod/apps/cbioportal-session-service/session_service_green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: cbioportal-session-service-green
  name: cbioportal-session-service-green
spec:
  replicas: 2
  selector:
    matchLabels:
      run: cbioportal-session-service-green
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: cbioportal-session-service-green
    spec:
      containers:
      - env:
        - name: SERVER_PORT
          value: "8888"
        - name: MONGODB_ROOT_PASSWORD
          valueFrom: 
            secretKeyRef:
              name: cbioportal-session-service-mongodb-creds
              key: mongodb-root-password
        image: cbioportal/session-service:0.6.5
        command: ["java"]
        args: [
                  "-Dspring.data.mongodb.uri=mongodb://root:$(MONGODB_ROOT_PASSWORD)@cbioportal-session-service-mongodb-green:27017/session_service?authSource=admin",
                  "-Dsecurity.basic.enabled=true",
                  "-Dspring.security.user.name=$(USER_NAME)",
                  "-Dspring.security.user.password=$(USER_PASSWORD)",
                  "-jar",
                  "/app.war"
        ]
        imagePullPolicy: Always
        readinessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 30
          timeoutSeconds: 2
          periodSeconds: 5
        name: cbioportal-session-service-green
        ports:
        - containerPort: 8888
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      # run on critical node group
      nodeSelector:
        workload: cbio-session
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "cbio-session"
          effect: "NoSchedule"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: cbioportal-session-service-green
  name: cbioportal-session-service-green
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8888
  selector:
    run: cbioportal-session-service-green
  type: ClusterIP
