argocd/aws/203403084713/clusters/cbioportal-prod/apps/cbioportal-session-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # ingress.kubernetes.io/large-client-header-buffers: "4 32k"
    # increae max response size to avoid 413 errors see
    # https://github.com/kubernetes/ingress-nginx/issues/1824
    ingress.kubernetes.io/proxy-body-size: 512m
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # add proxy protocol to header
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
  labels:
    app.kubernetes.io/instance: ingress
  name: cbioportal-session-service-ingress
  namespace: default
spec:
  rules:
    - host: session-service.cbioportal.org
      http:
        paths:
          - backend:
              service:
                name: cbioportal-session-service-green
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - session-service.cbioportal.org
      secretName: cbioportal-session-service-cert
